Profile photo OK. Simple profile view.

--- a/GoogleAuthApp/Views/Profile/ShowOwnProfile.cshtml
+++ b/GoogleAuthApp/Views/Profile/ShowOwnProfile.cshtml
@@ -5,69 +5,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<head>
+    <link href="@Url.Content("~/Styles/Profile.css")" rel="stylesheet" type="text/css" />
+    
+</head>
+
 <h2>My Profile</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecondName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BirthDay)
-        </th>
-        <th></th>
-    </tr>
-
-
-    @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-
-
-</table>
-
-<p>@ViewBag.FirstName</p>
-<p>@ViewBag.SecondName</p>
-<p>@ViewBag.UserName</p>
-<p>@ViewBag.BirthDay</p>
-
-@*
-        <h2>Basic File Upload</h2>
-        @using (Html.BeginForm("Upload",
-                                "Profile",
-                                FormMethod.Post,
-                                new { enctype = "multipart/form-data" }))
-        {
-            <label for="file">Upload Image:</label>
-            <input type="file" name="file" id="file" />
-            <br>
-            <br>
-
-            <input type="submit" value="Upload Image" />
-
-            <br>
-            <br>
-
-            @ViewBag.Message
-        }
+<div>
+    <div class="top-container">
+        <div class="profile-photo-container">
+            @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                  + Convert.ToBase64String(ViewBag.Photo) + "\" />")
+            <p> @Html.ActionLink("Add a photo", "Create")</p>
+        </div>
+        <div class="profile-info-container">
+            <div class="name">
+                <p>@ViewBag.FirstName @ViewBag.SecondName</p>
+            </div>
+            <p class="username">@ViewBag.UserName</p>
+            <p class="birthday">@ViewBag.BirthDay</p>
+        </div>
+        
+    </div>
+</div>
 
 
 
 
-    @using (Html.BeginForm("Create", "Profile", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <input name="ImageFile" type="file" />
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    }*@
 
+
+
+  
