--- a/GoogleAuthApp/Views/Profile/Index2.cshtml
+++ b/GoogleAuthApp/Views/Profile/Index2.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model IEnumerable<GoogleAuthApp.Models.PictureViewModel>
+﻿@model IEnumerable<GoogleAuthApp.Models.PictureViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -11,23 +9,10 @@
 <p>
     @Html.ActionLink("Добавить изображение", "Create")
 </p>
-<table>
-    <tr>
-        <th>Название</th>
-        <th>Картинка</th>
-    </tr>
+
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserId)
-            </td>
-            <td>
                 @Html.Raw("<img style='width:200px; height:150px;' src=\"data:image/jpeg;base64,"
                                     + Convert.ToBase64String(item.Image) + "\" />")
-            </td>
-        </tr>
     }
-
-</table>
