--- a/GoogleAuthApp/Views/Home/SearchUser.cshtml
+++ b/GoogleAuthApp/Views/Home/SearchUser.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "SearchUser";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -8,17 +7,19 @@
 </head>
 <h2>Search Results</h2>
 
-<table>
+
     @foreach (var user in ViewBag.List)
     {
-<tr>
-    <td>
-        @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                          + Convert.ToBase64String(user.Photo) + "\" />")
-    </td>
-    <td>@user.UserName</td>
-    <td>@user.FirstName</td>
-    <td>@user.SecondName</td>
-</tr>
+    <div style="position:relative;" class="searchedItem">
+        <a href="@Url.Action("ShowProfile", "Profile", new { userId = user.UserId} )" style="height: 200px; width: 200px;position:relative;">
+           
+                <span>
+                    @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                           + Convert.ToBase64String(user.Photo) + "\" />")
+                </span>
+                <span>@user.UserName</span>
+                <span>@user.FirstName</span>
+                <span>@user.SecondName</span>
+        </a>
+    </div>
     }
-</table>
