--- a/GoogleAuthApp/Views/Profile/Index2.cshtml
+++ b/GoogleAuthApp/Views/Profile/Index2.cshtml
@@ -7,7 +7,7 @@
 <h2>Мои изображения</h2>
 
 <p>
-    @Html.ActionLink("Добавить изображение", "Create")
+    @Html.ActionLink("Add Picture", "Create")
 </p>
 
 
