--- a/GoogleAuthApp/Views/Profile/Picture.cshtml
+++ b/GoogleAuthApp/Views/Profile/Picture.cshtml
@@ -15,7 +15,7 @@
 <h2>Мои изображения</h2>
 
 <p>
-    @Html.ActionLink("Добавить изображение", "Create")
+    @Html.ActionLink("Add picture", "Create")
 </p>
 <table>
     <tr>
