--- a/GoogleAuthApp/Views/Shared/_Layout.cshtml
+++ b/GoogleAuthApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Unions", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             
 
@@ -28,14 +28,16 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Chat", "Chat", "Chat")</li>
+                    <li>@Html.ActionLink("Offers", "Offers", "Profile")</li>
                     <li>
                         @using (Html.BeginForm("SearchUser", "Home", FormMethod.Post, new { id = "submitForm" }))
                         {
-                        <div class="search-container" style="margin:13px;">
+                            <div class="search-container" style="margin:13px;">
 
-                            <input type="text" name="SearchString" />
-                            <input type="submit" value="Filter" />
-                        </div>
+                                <input type="text" name="SearchString" />
+                                <input type="submit" value="Filter" />
+                            </div>
                         }
                     </li>
                 </ul>
