--- a/GoogleAuthApp/Views/Profile/Offers.cshtml
+++ b/GoogleAuthApp/Views/Profile/Offers.cshtml
@@ -77,7 +77,7 @@
         </div>
         <div>
             <a href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )" style="height: 50px; width: 150px;position:relative;">
-                <span>Open "@offer.UserId" 's profile</span>
+                <span>"@offer.UserId" 's profile</span>
             </a>
         </div>
     </div>
