Own profile CSS

--- a/GoogleAuthApp/Views/Profile/ShowOwnProfile.cshtml
+++ b/GoogleAuthApp/Views/Profile/ShowOwnProfile.cshtml
@@ -8,85 +8,117 @@
 <head>
     <link href="@Url.Content("~/Styles/Profile.css")" rel="stylesheet" type="text/css" />
     <link type="text/css" rel="stylesheet" href="~/Styles/sliderStyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
+@*https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap*@
+@section scripts {
+    @*add slider Slick*@
+    <script src="~/Scripts/slick.min.js"></script>
+    @*settings for slider*@
+    <script src="~/Scripts/sliderSettings.js"></script>
+}
 
 <h2>My Profile</h2>
 
 <div class="main-container">
-    <div class="left-sub-container">
-        <div class="profile-photo-container">
-            @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                  + Convert.ToBase64String(ViewBag.Photo) + "\" />")
-            <p> @Html.ActionLink("Add a photo", "Create")</p>
-        </div>
-        <div class="profile-info-container">
-            <p class="birthday">Location</p>
-            <p class="birthday">@ViewBag.BirthDay</p>
-        </div>
+    <div class="profile-container">
+        <div class="left-sub-container">
+            <div class="profile-photo-container">
+                @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                      + Convert.ToBase64String(ViewBag.Photo) + "\" />")
+                <p class="profile-add-photo-button"> @Html.ActionLink("Add a photo", "Create", new { }, new { @class = "button" })</p>
+            </div>
+            <div class="profile-info-container">
+                <p class="birthday">Location</p>
+                <p class="birthday">@ViewBag.BirthDay</p>
+            </div>
 
-        <div class="categories-container">
-
-        </div>
-    </div>
-    <div class="right-sub-container">
-        <div class="name">
-            <p>@ViewBag.FirstName @ViewBag.SecondName</p>
-        </div>
-        <p class="username">@ViewBag.UserName</p>
-        <div>
-            <div class="button">
-                <a href="@Url.Action("CreatePost", "Profile")">
+            <div>
+                <a class="button" href="@Url.Action("CreatePost", "Profile")">
                     Create Post
                 </a>
-            </div>
-            <a class="button" href="@Url.Action("CreateOffer", "Profile")" >
+                <a class="button" href="@Url.Action("CreateOffer", "Profile")">
                     Create Offer
-            </a>
+                </a>
+            </div>
+
         </div>
+        <div class="right-sub-container">
+            <div class="name">
+                <p>@ViewBag.FirstName @ViewBag.SecondName</p>
+            </div>
+            <p class="username">@ViewBag.UserName</p>
+        </div>
+        <div class="categories-container">
+            <p class="name">Categories</p>
+            <p>Category1</p>
+            <p>Category2</p>
+            <p>Category3</p>
+            <p>Category4</p>
+        </div>
+    </div>
 
-
+    <div>
         @foreach (var postORoffer in Model.PostsAndOffers.OrderByDescending(p => p.Date))
         {
             <hr>
-            <div>
-                <span>@postORoffer.PostOrOffer</span>
+            <div class="postoffername">
+                <p>@postORoffer.PostOrOffer</p>
             </div>
-            <div style="position:relative;" class="searchedItem, top-container">
-
-                <div style="display:flex;flex-direction:row;">
-                    <div>
-                        <span>Details  </span>
+            <div class="middle-sub-container">
+                <div class="postoffer-top-container">
+                    <div class="details-container">
+                        <span>Details:</span>
                         <br />
-                        <textarea readonly style="overflow:auto;resize:none">@postORoffer.Text</textarea>
+                        <textarea readonly>@postORoffer.Text</textarea>
                     </div>
-                    <br />
-                    <br />
-                    <div>
-                        <span>Date  </span>
+                    <div class="date-container">
+                        <span>Date:</span>
                         <br />
                         @postORoffer.Date
                     </div>
-                    <br />
-                    <br />
-                    <div>
-                        <span>Categories:  </span>
-                        <br />
-                        <br />
+                    <div class="postoffer-categories-container">
+                        <span>Categories:</span>
                         @foreach (var category in postORoffer.Categories)
                         {
-                            <p>
-                                @category.Group
-                            </p>
+                            <p>@category.Group</p>
                         }
                     </div>
-
                 </div>
-            </div>
-            if (@postORoffer.PostOrOffer.Equals("Post"))
-            {@*Post*@
-            <div class="searchedItem, top-container">
+                @if (@postORoffer.PostOrOffer.Equals("Post"))
+                {@*Post*@
                 <div class="slider">
                     @foreach (var picture in postORoffer.PostPictures)
+                    {
+                        <div class="slider__item">
+                            @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                    + Convert.ToBase64String(picture.Picture) + "\" />")
+                        </div>
+                    }
+                </div>
+                <div class="postoffer-low-container">
+                    <div>
+                        <a href="@Url.Action("AddLikeToPost", "Profile", new { postId = postORoffer.Id, backTo = "ShowOwnProfile"} )">
+                            <span>Like:</span>
+                        </a>
+                        @postORoffer.Likes
+                    </div>
+                    <div>
+                        <a class="button" href="@Url.Action("EditPost", "Profile", new { Id = postORoffer.Id} )">
+                            <input type="submit" value="Edit" />
+                        </a>
+                    </div>
+                    <div>
+                        <a class="button" href="@Url.Action("DeletePost", "Profile", new { postId = postORoffer.Id} )">
+                            <input type="submit" value="Delete Post" />
+                        </a>
+                    </div>
+                </div>
+                }
+                else
+                { @*Offer*@
+                <div class="slider">
+                    @foreach (var picture in postORoffer.OfferPictures)
                     {
                         <div class="slider__item">
                             @Html.Raw("<img src=\"data:image/jpeg;base64,"
@@ -94,75 +126,32 @@
                         </div>
                     }
                 </div>
-            </div>
-            <div class="searchedItem, top-container">
-                <div>
-                    <a href="@Url.Action("AddLikeToPost", "Profile", new { postId = postORoffer.Id, backTo = "ShowOwnProfile"} )" style="height: 50px; width: 50px;position:relative;">
-                        <span>Like:</span>
-                    </a>
-                    @postORoffer.Likes
-                </div>
-                <div>
-                    <br />
-                    <a href="@Url.Action("EditPost", "Profile", new { Id =postORoffer.Id} )" style="height: 50px; width: 50px;position:relative;">
-                        <input type="submit" value="Edit" />
-                    </a>
-                </div>
-                <div style="position:relative;" class="searchedItem">
-                    <br />
-                    <a href="@Url.Action("DeletePost", "Profile", new { postId = postORoffer.Id} )" style="height: 100px; width: 100px;position:relative;">
-                        <input type="submit" value="Delete Post" />
-                    </a>
-                </div>
-            </div>
-        }
-        else
-        { @*Offer*@
-        <div class="searchedItem, top-container">
-            <div class="slider">
-                @foreach (var picture in postORoffer.OfferPictures)
-                {
-                    <div class="slider__item">
-                        @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                               + Convert.ToBase64String(picture.Picture) + "\" />")
+                <div class="postoffer-low-container">
+                    <div>
+                        <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =postORoffer.Id, backTo = "ShowOwnProfile"} )">
+                            <span>Like:</span>
+                        </a>
+                        @postORoffer.Likes
                     </div>
+                    <div>
+                        <a class="button" href="@Url.Action("EditOffer", "Profile", new { Id =postORoffer.Id} )">
+                            <input type="submit" value="Edit" />
+                        </a>
+                    </div>
+                    <div>
+                        <a class="button" href="@Url.Action("DeleteOffer", "Profile", new { offerId = postORoffer.Id} )">
+                            <input type="submit" value="Delete Offer" />
+                        </a>
+                    </div>
+                </div>
                 }
             </div>
-        </div>
-        <div class="searchedItem, top-container">
-            <div>
-                <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =postORoffer.Id, backTo = "ShowOwnProfile"} )" style="height: 50px; width: 50px;position:relative;">
-                    <span>Like:</span>
-                </a>
-                @postORoffer.Likes
-            </div>
-            <div>
-                <br />
-                <a href="@Url.Action("EditOffer", "Profile", new { Id =postORoffer.Id} )" style="height: 50px; width: 50px;position:relative;">
-                    <input type="submit" value="Edit" />
-                </a>
-            </div>
-            <div style="position:relative;" class="searchedItem">
-                <br />
-                <a href="@Url.Action("DeleteOffer", "Profile", new { offerId = postORoffer.Id} )" style="height: 100px; width: 100px;position:relative;">
-                    <input type="submit" value="Delete Offer" />
-                </a>
-            </div>
-        </div>
+
     }
-
-
-}
-    </div>
-   
+</div>
 </div>
 
-@section scripts {
-    @*add slider Slick*@
-    <script src="~/Scripts/slick.min.js"></script>
-    @*settings for slider*@
-    <script src="~/Scripts/sliderSettings.js"></script>
-}
+
 
 
 
